--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,8 +5,9 @@ body {
 }
 
 .banner {
-    background-color: #bb352aff;
+    /* background-color: #bb352aff; */
     height: auto;
+    width: 100%;
     padding: 10px;
     display: inline-block;
 }
@@ -14,15 +15,18 @@ body {
 /* ALIGN */
 
 .center {
-    display: block;
+    display: grid;
     margin-left: auto;
     margin-right: auto;
+    justify-content: center;
 }
+
 .center-logo {
-    display: block;
+    display: grid;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 60%;
+    /* margin-top: 30px; */
   }
 
 .right {
