--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,7 +2,9 @@ body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
     background-color: black;
-}
+    /* width: 100%;
+    height: auto;   */
+  }
 
 a {
   text-decoration: none;
@@ -14,6 +16,12 @@ p {
 
 .fs-3 {
   font-family: 'Quicksand', sans-serif;
+}
+
+.small-note {
+  font-size: small;
+  color: lightgray;
+  font-style: italic;
 }
 
 .header {
@@ -94,6 +102,9 @@ p {
 }
 
 /* IMAGES */
+
+.full-width {
+}
 
 .img-car {
   max-height: 15%;
