--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -92,19 +92,19 @@ p {
   bottom: 0;
   width: 100%;
   /* background-color: darkgrey; */
-  text-align: center;
+  text-align: right;
   text-decoration: none;
-  display: flexbox;
+  display: inline-block;
+  font-size: x-small;
+  float: right;
 }
 
 .footer a:hover{
   text-decoration: none;
+  color: white;
 }
 
 /* IMAGES */
-
-.full-width {
-}
 
 .img-car {
   max-height: 15%;
